<resources>

    <string name="app_name">Blackjack</string>
    <string name="play">Play Game</string>
    <string name="instructions">Instructions</string>
    <string name="options">Options</string>

    <string name="instructionstext1">
        Blackjack is played with a standard 52 card decks, with each
        denomination assigned a point value.
    </string>
    <string name="instructionstext2">The cards 2 through 10 are worth their face value.
    </string>
    <string name="instructionstext3">
        Kings, queens, and jacks are each worth 10, and aces may be used
        as either 1 or 11.
    </string>
    <string name="instructionstext4">
        The object for the player is to draw cards totaling closer
        to 21, without going over, than the dealers cards.
    </string>

    <string name="say_options">Options</string>
    <string name="colour">Change Colour</string>
    <string name="blue">Blue</string>
    <string name="green">green</string>
    <string name="red">Red</string>

    <string name="title_activity_game">Blackjack</string>
    <string name="you_busted">You busted! Dealer won!</string>
    <string name="you_got_blackjack">You got blackjack!</string>
    <string name="dealer_busted">Dealer busted! You won!</string>
    <string name="draw">Draw!</string>
    <string name="you_won">You won!</string>
    <string name="dealer_won">Dealer won!</string>
    <string name="deal">Deal</string>
    <string name="press_to_continue">Press to continue</string>
    <string name="press_to_start_again">Press to start again</string>
    <string name="game_over">Game over!</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="deck">Change Deck</string>
    <string name="deck1">Deck 1</string>
    <string name="deck2">Deck 2</string>
    <string name="deck3">Deck3</string>
    <string name="vibrate">Vibrate Test</string>
</resources>
