<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/instructions">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:src="@drawable/howtoblackjack"
        android:adjustViewBounds="true"
        />

    <TextView
        android:id="@+id/instructions1"
        android:textColor="@color/textColorLight"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionstext1"
        />
    <TextView
        android:id="@+id/instructions2"
        android:textColor="@color/textColorLight"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionstext2"
        />
    <TextView
        android:id="@+id/instructions3"
        android:textColor="@color/textColorLight"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionstext3"
        />
    <TextView
        android:id="@+id/instructions4"
        android:textColor="@color/textColorLight"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionstext4"
        />

</LinearLayout>
